--- a/package.json
+++ b/package.json
@@ -1,14 +1,43 @@
 {
-    "name": "lws-json-server-todos",
-    "description": "Example in memory todos api with json-server by Learn with Sumit",
+    "name": "todo-application-lws",
     "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-        "start": "json-server --watch db_todos.json --no-cors true --port 9000"
-    },
+    "private": true,
     "dependencies": {
-        "json-server": "^0.17.0"
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.1.1",
+        "@testing-library/user-event": "^13.5.0",
+        "json-server": "^0.17.0",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
+        "react-redux": "^8.0.1",
+        "react-scripts": "5.0.1",
+        "redux": "^4.2.0",
+        "redux-devtools-extension": "^2.13.9",
+        "redux-thunk": "^2.4.1",
+        "web-vitals": "^2.1.4"
     },
-    "keywords": [],
-    "author": "Sumit Saha, Learn with Sumit"
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
